--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "watch": "tsc -w -p ./"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "copy-paste": "^1.3.0",
     "json-to-ts": "^1.7.0",
+    "lodash": "^4.17.21",
     "universal-analytics": "^0.4.20",
     "uuid-by-string": "^3.0.2"
   },
